test_data_ajis/ajis/valid/lexer/comments/c_mixed_types_valid.ajis
// First comment
/* Second comment */
// Third comment
/* Fourth comment */
[1, 2, 3]
