test_data_ajis/ajis/invalid/lexer/comments/c_unterminated_block_invalid.ajis
/* This block comment is never closed
[
  1, 2, 3
]
